src/main/default/objects/Extentia_SIM__MP_Map_Point__c/Extentia_SIM__MP_Map_Point__c.object-meta.xml
<CustomObject>
    <label>MP_Map_Point</label>
    <nameField>
        <label>MP_Map_Point Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MP_Map_Point</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>