src/main/default/objects/Extentia_SIM__MP_Map_Point__c/fields/Extentia_SIM__Account_Id_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Account_Id_For_Contact__c</fullName>
    <label>Account Id For Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>