src/main/default/objects/Extentia_SIM__MP_Map_Point__c/fields/Extentia_SIM__Description__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Description__c</fullName>
    <label>Description</label>
    <length>20</length>
    <type>Text</type>
</CustomField>