src/main/default/objects/Extentia_SIM__MP_Map_Point__c/fields/Extentia_SIM__Longitude__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Longitude__c</fullName>
    <label>Longitude</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>