src/main/default/objects/Extentia_SIM__MP_Map_Point__c/fields/Extentia_SIM__RecordID__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__RecordID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>RecordID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>