src/main/default/objects/Extentia_SIM__MP_Map_Point__c/fields/Extentia_SIM__Status__c.field-meta.xml
<CustomField>
    <fullName>Extentia_SIM__Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>