src/main/default/objects/Extentia_SIM__MP_Map_Point__c/listViews/Extentia_SIM__All.listView-meta.xml
<ListView>
    <fullName>Extentia_SIM__All</fullName>
    <columns>NAME</columns>
    <columns>Extentia_SIM__Label__c</columns>
    <columns>Extentia_SIM__Entity__c</columns>
    <columns>Extentia_SIM__Latitude__c</columns>
    <columns>Extentia_SIM__Longitude__c</columns>
    <columns>Extentia_SIM__City__c</columns>
    <columns>Extentia_SIM__Country__c</columns>
    <columns>Extentia_SIM__Postal_Code__c</columns>
    <columns>Extentia_SIM__State__c</columns>
    <columns>Extentia_SIM__Street__c</columns>
    <columns>Extentia_SIM__Status__c</columns>
    <columns>Extentia_SIM__Account_Id_For_Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>